--- a/gateway-aggregation/src/App.css
+++ b/gateway-aggregation/src/App.css
@@ -1,38 +1,22 @@
+
+
 .App {
   text-align: center;
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-label {
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px purple; 
+  margin-right: 10px;
+  color: aliceblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.selector {
+  font-size: 20px;
+  font-weight: bold;
+  margin-right: 10px;
+  background-color: black;
+  color: aliceblue;
 }
